cli/src/tests/error/optional.sibs
env::is_os (window) =>;
env::is_os (linux) => {};
env::is_os (darwin) => $file_name1 = release{$version}-darwin.zip"
env::is_os (darwin) => $file_name2 = "release{$version}-darwin.zip;
env::is_os (darwin() => $file_name3) = release{$version}-darwin.zip";
env::is_os (darwin() =>) #(app) ;
env::is_os (darwin) => ;